# anyrepo

./: .gitignore  README.md  setupdev.py
tests/: script.sh
tests/app/: CMakeLists.txt  main.cpp
tests/app/conan/: conanfile.py
tests/pkga/: A.cpp  A.h  CMakeLists.txt  Config.cmake.in
tests/pkga/conan/: conanfile.py
tests/pkgb/: B.cpp  B.h  CMakeLists.txt  Config.cmake.in
tests/pkgb/conan/: conanfile.py
